# space_rocks

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  readme
src/: main.c  types.h
